--- a/style.css
+++ b/style.css
@@ -34,6 +34,23 @@ main {
    justify-content: space-around;
 }
 
+.result {
+   font-size: 28px;
+   text-align: center;
+}
+
+.reset {
+   font-size: 42px;
+   font-weight: bold;
+   color: #008000;
+   transition: font-size .2s ease-in-out;
+}
+
+.reset:hover {
+   cursor: pointer;
+   font-size: 44px;
+}
+
 .letter {
    width: 45px;
    height: 45px;
@@ -45,6 +62,7 @@ main {
    border: 3px solid #808080;
    border-radius: 12px;
    transition: transform .1s ease-in-out;
+   outline: none;
 }
 
 .letter:hover {
