--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ main {
    height: 165px;
    font-size: 34px;
    text-align: center;
-   padding-top: 20px
+   padding-top: 20px;
 }
 
 .input-name {
@@ -33,6 +33,10 @@ main {
    outline: none;
    border-radius: 5px;
 }
+
+::placeholder { 
+   opacity: 0.65;
+ }
 
 .play:hover {
    color: #00A000;
